basics/flask-app/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  #updating ns for ingress  name: flask
  name: nginx
