basics/flask-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-dep
  namespace: nginx
  labels:
    app: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask-app
        image: saumitrarajput/flask-app:0.1
        ports:
        - containerPort: 5000
        livenessProbe: 
          httpGet:
            path: /
            port: 5000
        readinessProbe:
          httpGet: 
            path: /
            port: 5000
