basics/flask-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: nginx
spec:
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
