basics/flask-app/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: web-ingress
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # Took help from claude
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /flask
            backend:
              service:
                name: flask-service
                port:
                  number: 8080
              
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
